kustomize-incomplete/actualbudget/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"actual-server","namespace":"actualbudget"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"actual-server"}},"template":{"metadata":{"labels":{"app":"actual-server"}},"spec":{"containers":[{"env":[{"name":"PORT","value":"5006"},{"name":"ADMIN_PASSWORD","value":"your_admin_password"},{"name":"DATA_DIR","value":"/data"}],"image":"actualbudget/actual-server:latest","name":"actual-server","ports":[{"contai [...]
    creationTimestamp: "2024-05-29T21:20:40Z"
    generation: 1
    name: actual-server
    namespace: actualbudget
    resourceVersion: "20145007"
    uid: 7408f530-2a2a-4700-864e-812dd3987068
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: actual-server
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: actual-server
      spec:
        containers:
        - env:
          - name: PORT
            value: "5006"
          - name: ADMIN_PASSWORD
            value: your_admin_password
          - name: DATA_DIR
            value: /data
          image: actualbudget/actual-server:latest
          imagePullPolicy: Always
          name: actual-server
          ports:
          - containerPort: 5006
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data
            name: data-volume
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-05-29T21:20:40Z"
      lastUpdateTime: "2024-05-29T21:21:08Z"
      message: ReplicaSet "actual-server-58cfdf49bc" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-12-15T01:11:49Z"
      lastUpdateTime: "2024-12-15T01:11:49Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
