kustomize-incomplete/actualbudget/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      gethomepage.dev/description: Personal Finance Manager
      gethomepage.dev/enabled: "true"
      gethomepage.dev/name: Actual Budget
      gethomepage.dev/ping: actualbudget.actualbudget.svc.cluster.local
      gethomepage.dev/siteMonitor: https://actualbudget.stillon.top/
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","gethomepage.dev/description":"Personal Finance Manager","gethomepage.dev/enabled":"true","gethomepage.dev/name":"Actual Budget","gethomepage.dev/ping":"actualbudget.actualbudget.svc.cluster.local","gethomepage.dev/siteMonitor":"https://actualbudget.stillon.top/"},"name":"actual-server","namespace":"actualbudget"},"spec":{"rules":[{"host":"actualbudget.stil [...]
    creationTimestamp: "2024-05-29T21:20:40Z"
    generation: 13
    name: actual-server
    namespace: actualbudget
    resourceVersion: "30101831"
    uid: bd0646db-5eca-40d6-a26b-03192d5b895a
  spec:
    rules:
    - host: actualbudget.stillon.top
      http:
        paths:
        - backend:
            service:
              name: actual-server
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - actualbudget.stillon.top
      secretName: actualbudget-tls
  status:
    loadBalancer:
      ingress:
      - ip: 161.97.88.129
kind: List
metadata:
  resourceVersion: ""
