kustomize-incomplete/actualbudget/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"actual-server","namespace":"actualbudget"},"spec":{"ports":[{"port":80,"targetPort":5006}],"selector":{"app":"actual-server"},"type":"ClusterIP"}}
    creationTimestamp: "2024-05-29T21:20:40Z"
    name: actual-server
    namespace: actualbudget
    resourceVersion: "12286368"
    uid: 3b06e119-3cf5-4f80-9da5-3c85338604d5
  spec:
    clusterIP: 10.43.245.110
    clusterIPs:
    - 10.43.245.110
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 5006
    selector:
      app: actual-server
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
